画像の追加

--- a/index.html
+++ b/index.html
@@ -4,11 +4,58 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./stylesheet/reset.css">
+    <link rel="stylesheet" href="./stylesheet/index.css">
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <img class="header-img" src="./images/sappari.png">
+        <div id="menu">
+            <input type="checkbox" id="menu-btn-check">
+            <label for="menu-btn-check" class="menu-btn"><span></span></label>
+            <div class="menu-list">
+                <ul>
+                    <li><a href="#">top</a></li>
+                    <li><a href="#">about</a></li>
+                    <li><a href="#">accese</a></li>
+                    <li><a href="#">help</a></li>
+                </ul>
+            </div>
+        </div>
+    </header>
+    <img id="top-img" src="./images/main_01.png">
+    <div id="wrap">
+        <div id="left-content">
+            <div class="box1">
+                <img class="left-img" src="./images/pc_img_11.png">
+                <p>飼い主募集中</p>
+                <p>くま牧場</p>
+            </div>
+            <div class="box2">
+                <img class="left-img" src="./images/pc_img_11.png">
+                <p>飼い主募集中</p>
+                <p>くま牧場</p>
+            </div>
+            <div class="box3">
+                <img class="left-img" src="./images/pc_img_11.png">
+                <p>飼い主募集中</p>
+                <p>くま牧場</p>
+            </div>
+        </div>
+        <div id="light-content">
+            <div class="gallery">
+                <img class="g-img1" src="./images/pc_img_01.png">
+                <img class="g-img2" src="./images/pc_img_02.png">
+                <img class="g-img3" src="./images/pc_img_03.png">
+                <img class="g-img4" src="./images/pc_img_04.png">
+            </div>
+        </div>
+    </div>
     <main>
-        
+        <div class="wrap">
+
+        </div>
     </main>
 </body>
 </html>
