--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
         </div>
     </header>
-    <img id="top-img" src="./images/main_01.png">
+    <img class="top-img" src="./images/main_01.png">
     <div id="wrap">
         <div id="left-content">
             <div class="box1">
@@ -43,19 +43,78 @@
                 <p>くま牧場</p>
             </div>
         </div>
-        <div id="light-content">
-            <div class="gallery">
+        <div id="right-content">
+            <div id="gallery">
                 <img class="g-img1" src="./images/pc_img_01.png">
                 <img class="g-img2" src="./images/pc_img_02.png">
                 <img class="g-img3" src="./images/pc_img_03.png">
                 <img class="g-img4" src="./images/pc_img_04.png">
             </div>
+            <div id="youtube">
+                <iframe width="100%" height="315" src="https://www.youtube.com/embed/3xqvrazVkuY?controls=0" title="YouTube video player"
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                </iframe>
+            </div>
+            <div id="information">
+                <div class="information-title">
+                    <h3>新着情報</h3>
+                </div>
+                <div class="information-list">
+                    <ul>
+                        <li>ジンギスカンは松尾が美味しい</li>
+                        <li>札幌一番は「塩」一択</li>
+                        <li>北海道赤平市が人気急上昇？</li>
+                        <li>ジンギスカンは松尾が美味しい</li>
+                        <li>札幌一番は「塩」一択</li>
+                    </ul>
+                </div>
+            </div>
+            <div id="itroduction-area1">
+                <img class="area-img" src="./images/pc_img_05.png">
+                <div class="itroduction-text">
+                    <h3>赤平よいとこ一度はおいで</h3>
+                    <p>
+                        北海道赤平市は北海道出身者が出演する某人気テレビ番組の影響でここ数年で知名度が急上昇、
+                        ドラマのロケ地になるなど、注目を集めています。
+                    </p>
+                    <div class="button-area">
+                        <button>もっと知りたい</button>
+                        <button>今すぐ行きます</button>
+                    </div>
+                </div>
+            </div>
+            <div id="shopping">
+                <div class="item-box">
+                    <div class="item1">
+                        <img src="./images/buildingjpeg.jpeg">
+                        <p>マンション買うならいくら？</p>
+                    </div>
+                    <div class="item2">
+                        <img src="./images/IMG_0643.jpeg">
+                        <p>あの時買えばよかったアレ</p>
+                    </div>
+                    <div class="item3">
+                        <img src="./images/IMG_1319.jpeg">
+                        <p>売る気のないメルカソ特集</p>
+                    </div>
+                </div>
+                <button>メルカソでお買い物する</button>
+            </div>
+            <div id="itroduction-area2">
+                <div class="itroduction-text">
+                    <h3>東京の空も悪くない</h3>
+                    <p>
+                        東京は空が狭い<br>
+                        高いビルが隙間なくたくさん伸びていって、<br>
+                        空全体が見えることなんてほとんどないけど。<br>
+                        たまに高いところから空を見てみると、<br>
+                        意外な発見があったりして。一息つくのもいいと思うよ。
+                    </p>
+                    <button>空の写真をもっとみる。</button>
+            </div>
+            <img class="area-img" src="./images/pc_img_09.png">
         </div>
     </div>
-    <main>
-        <div class="wrap">
-
-        </div>
-    </main>
 </body>
 </html>
