--- a/index.html
+++ b/index.html
@@ -27,20 +27,22 @@
     <img class="top-img" src="./images/main_01.png">
     <div id="wrap">
         <div id="left-content">
-            <div class="box1">
-                <img class="left-img" src="./images/pc_img_11.png">
-                <p>飼い主募集中</p>
-                <p>くま牧場</p>
-            </div>
-            <div class="box2">
-                <img class="left-img" src="./images/pc_img_11.png">
-                <p>飼い主募集中</p>
-                <p>くま牧場</p>
-            </div>
-            <div class="box3">
-                <img class="left-img" src="./images/pc_img_11.png">
-                <p>飼い主募集中</p>
-                <p>くま牧場</p>
+            <div class="box">
+                <div class="item1">
+                    <img class="left-img" src="./images/pc_img_11.png">
+                    <p>飼い主募集中</p>
+                    <p>くま牧場</p>
+                </div>
+                <div class="item2">
+                    <img class="left-img" src="./images/pc_img_11.png">
+                    <p>飼い主募集中</p>
+                    <p>くま牧場</p>
+                </div>
+                <div class="item3">
+                    <img class="left-img" src="./images/pc_img_11.png">
+                    <p>飼い主募集中</p>
+                    <p>くま牧場</p>
+                </div>
             </div>
         </div>
         <div id="right-content">
@@ -112,9 +114,47 @@
                         意外な発見があったりして。一息つくのもいいと思うよ。
                     </p>
                     <button>空の写真をもっとみる。</button>
+                </div>
+                <img class="area-img" src="./images/pc_img_09.png">
             </div>
-            <img class="area-img" src="./images/pc_img_09.png">
+            <div id="wish-list">
+                <div class="wish-box">
+                    <div class="item1">
+                        <img src="./images/pc_img_08.png">
+                        <p>未使用ZIPPO</p>
+                        <button>欲しい</button>
+                    </div>
+                    <div class="item2">
+                        <img src="./images/pc_img_08.png">
+                        <p>モノリスオルゴール</p>
+                        <button>欲しい</button>
+                    </div>
+                </div>
+            </div>
+            <div id="itroduction-area3">
+                <img class="food-img" src="./images/pc_img_10.png">
+                <div class="itroduction-text">
+                    <h3>日本に生まれて良かったでしょ</h3>
+                    <p>
+                        海外旅行に行くたび思うこと行く度思うこと。「日本おご飯が食べたい。」<br>
+                        食べ慣れてるものだからということもあるだろうけれど、<br>
+                        それだけじゃないよね。
+                    </p>
+                    <button>カレーを食べたい</button>
+                    <button>今日はラーメン</button>
+                    <button>デート前だから今日はガマン</button>
+                </div>
+            </div>
         </div>
     </div>
+    <footer>
+        <div class="img-box">
+            <img class="footer-img" src="./images/sappari.png">
+        </div>
+        <div class="text-box">
+            <p>Matsuo sheep</p>
+            <p>〒000-0000 TOKYO SHINJYUKU 0-0-0</p>
+        </div>
+    </footer>
 </body>
 </html>
